# ChessBot

./: .gitignore  CMakeLists.txt  README.md  structure.txt
include/: Board.h  ChessRenderer.h  Game.h  MoveGenerator.h
src/: Board.cpp  main  main.cpp
